feito classe estatistica

--- a/buscador/css/style.css
+++ b/buscador/css/style.css
@@ -4,3 +4,46 @@ body {
 .space {
     margin: 50px;
 }
+.button {
+    padding: 15px 25px;
+    font-size: 24px;
+    text-align: center;
+    cursor: pointer;
+    outline: none;
+    color: #fff;
+    #background-color: #4CAF50;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 9px #999;
+}
+
+/*.button:hover {background-color: #3e8e41}*/
+
+.button:active {
+    background-color: #3e8e41;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+}
+* {box-sizing: border-box}
+
+.container {
+    width: 100%;
+    background-color: #ddd;
+}
+
+.skills {
+    text-align: right;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: white;
+}
+/*
+.html {width: 100%; background-color: #4CAF50;}
+.css {width: 80%; background-color: #2196F3;}
+.js {width: 65%; background-color: #f44336;}
+.php {width: 50%; background-color: #808080;}
+*/
+.container {
+    padding-right: 0px;
+    padding-left: 0px;
+}
